<resources>
    <string name="app_name">i-Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="signInText">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Sign In</string>
    <string name="registration">Registration</string>
    <string name="registrationText">Registration</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Enter E-Mail</string>
    <string name="enterLogin">Enter Login</string>
    <string name="enterPassword">Enter Password</string>
    <string name="settingsText">Settings</string>
    <string name="host">Enter Server Host</string>
    <string name="port">Enter Server Port</string>
    <string name="save">Save</string>
    <string name="action_save">Save</string>
    <string name="search_data">Search Data</string>
    <string name="secret_description">Secret Description</string>
    <string name="secret_login">Secret Login</string>
    <string name="secret_password">Secret Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="document">Document</string>
    <string name="description">Description</string>
    <string name="navigation_drawer_open">Open navigation draw</string>
    <string name="navigation_drawer_close">Close navigation draw</string>


</resources>
