<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="passwordkeeperclient.spart.ru.password_keeper_client.SettingsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/settingsText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/host"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:hint="@string/host"
            android:inputType="text"
            tools:ignore="TextFields"/>

        <EditText
            android:id="@+id/port"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/host"
            android:layout_centerHorizontal="true"
            android:hint="@string/port"
            android:inputType="number"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/port"
            android:layout_centerHorizontal="true"
            android:onClick="saveSettings"
            android:text="@string/save"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
