<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="passwordkeeperclient.spart.ru.password_keeper_client.activity.RegistrationActivity">

       <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/registrationToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/registrationText"
                android:textSize="18sp"
                android:textColor="@color/defaultTextColor"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="TextFields"/>

            <EditText
                android:id="@+id/loginText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailText"
                android:layout_centerHorizontal="true"
                android:hint="@string/enterLogin"

                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginText"
                android:layout_centerHorizontal="true"
                android:hint="@string/enterPassword"
                android:maxLength="15"
                android:inputType="textPassword"
                tools:ignore="TextFields"/>

            <EditText
                android:id="@+id/confirmPasswordText"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordText"
                android:layout_centerHorizontal="true"
                android:hint="@string/confirmPassword"
                android:maxLength="15"
                android:inputType="textPassword"
                tools:ignore="TextFields"/>



            <Button
                android:id="@+id/registrationBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmPasswordText"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/registration"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
