<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.EditSecretActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/editToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/secretDescription"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/secret_description"
                    android:inputType="text"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/secretLogin"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/secret_login"
                    android:inputType="text"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/secretPassword"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/secret_password"
                    android:inputType="text"
                    tools:ignore="TextFields" />

            </LinearLayout>

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>

</android.support.constraint.ConstraintLayout>
